Bug 1316871 - Throttle background setTimeouts. r=bkelly

MozReview-Commit-ID: 2bN3NZfdCzv